--- a/package.json
+++ b/package.json
@@ -53,5 +53,5 @@
   "bugs": {
     "url": "https://github.com/tongsyquan/benadmin/issues"
   },
-  "homepage": "https://github.com/tongsyquan/benadmin#readme"
+  "homepage": "./"
 }
